// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard Component Given imageData matches snapshot 1`] = `
<article
  className="ImageCard"
>
  <header>
    <h2
      className="siimple-h3"
    >
      test title
    </h2>
  </header>
  <img
    alt="test title"
    className="ImageCard__image"
    src="test url"
  />
  <p>
    <small
      className="siimple-small"
    >
      test copyright
      , 
      test date
    </small>
  </p>
  <p
    className="siimple-p"
  >
    test explanation
  </p>
</article>
`;

exports[`ImageCard Component matches snapshot 1`] = `
<article
  className="ImageCard"
>
  <header>
    <h2
      className="siimple-h3"
    />
  </header>
  <img
    alt={undefined}
    className="ImageCard__image"
    src={undefined}
  />
  <p>
    <small
      className="siimple-small"
    >
      , 
    </small>
  </p>
  <p
    className="siimple-p"
  />
</article>
`;
